--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -8,6 +8,7 @@ box-sizing: border-box;
 align-self: center;
 margin-left: auto;
 cursor: pointer;
+border-radius: 2px;
 }
 
 .profile__add-button:hover {
