--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,6 +3,7 @@
   line-height: 22px;
   color: #545454;
   margin: 67px 0 0;
+  font-weight: normal;
 }
 
 @media screen and (max-width: 920px)
@@ -15,6 +16,7 @@
 @media screen and (max-width: 670px)
 {
   .footer__copyright {
+    margin: 48px 0 0;
     font-size: 14px;
     line-height: 17px;
   }
