--- a/blocks/places/__heart-button/places__heart-button.css
+++ b/blocks/places/__heart-button/places__heart-button.css
@@ -8,4 +8,14 @@
   align-self: flex-end;
   cursor: pointer;
   padding: 15px;
+  border: none;
+  background-color: white;
+}
+
+.places__heart-button:hover {
+  opacity: 0.6;
+}
+
+.places__heart-button:active {
+  background-image: url(../../../images/heart-black.svg);
 }
