--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -13,3 +13,13 @@
 .profile__edit-button:hover {
   opacity: 0.6;
 }
+
+@media screen and (max-width: 670px)
+{
+  .profile__edit-button{
+    width: 18px;
+    height: 18px;
+    background-size: 7.5px;
+    margin: 0 0 7px 10px;
+  }
+}
