--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -7,6 +7,7 @@
 @media screen and (max-width: 670px)
 {
   .profile__info{
-    margin: 24px 30px 0;
+    margin: 24px auto 0;
+    max-width: 320px;
   }
 }
