--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -4,3 +4,10 @@
   margin: 45px auto 60px;
   max-width: 880px;
 }
+
+@media screen and (max-width: 670px)
+{
+  .root{
+    margin: 28px auto 36px;
+  }
+}
