--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,13 +1,13 @@
-.popup__input-work {
+.popup__input {
   max-width: 358px;
   margin: 28px 36px 0;
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   padding: 0 0 11px;
   font-size: 14px;
   line-height: 17px;
 }
 
-.popup__input-work:focus {
+.popup__input:focus {
   outline: none;
 }
