--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,7 +1,7 @@
 .popup__title {
   font-size: 24px;
   line-height: 29px;
-  margin: 34px auto 0;
+  margin: 34px auto 22px;
   font-weight: bold;
 }
 
@@ -10,6 +10,6 @@
   .popup__title  {
     font-size: 18px;
     line-height: 22px;
-    margin: 25px auto 0;
+    margin: 25px auto 22px;
   }
 }
